update to current CV site

--- a/index.html
+++ b/index.html
@@ -3,73 +3,57 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Justin's Personal Site</title>
+  <title>Justin Ciano</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <table cellspacing=20>
-    <td>  <img src="https://media-exp1.licdn.com/dms/image/C5103AQFoZrQrmGqzhw/profile-displayphoto-shrink_400_400/0/1517584638562?e=1648080000&v=beta&t=0c8DggaFsDdVYCq0W_osn5ZTAJ4XVd6TJpkw64y_txI" alt="Justin Profile Picture">
-</td>
-    <td><h1>Justin Ciano</h1>
-    <p><em>Implementation Manager at <strong>Momentive.ai</strong></em></p>
-    <p>I am an HTML expert</p></td>
-  </table>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <h1>I'm Justin.</h1>
+    <h2>an implementation manager.</h2>
+    <img class=bottom-cloud src="images/cloud.png" alt="cloud-img">
+    <img src="images/mountain.png" alt="mountain-img">
+  </div>
+  <div class="middle-container">
+    <div class="profile">
+      <img src="images/favicon.png" alt="favicon-me">
+      <h2>Hello.</h2>
+      <p class="intro">I am an Implementation Manager with Momentive.ai.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="golf-img" src="images/scope.png" alt="golf-img">
+        <h3>Golfing</h3>
+        <p>I am a good golfer. But not that good. Like might shoot 90, but also could shoot 120 depending on the day.
+      </div>
+      <div class="skill-row">
+        <img class="taco-img" src="images/taco.png" alt="taco-img">
+        <h3>Taco Connoisseur</h3>
+        <p>I can eat a ton of tacos. Especially from Taco Bell. Don't forget the mild sauce.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>Love tacos as much as I do? Lets go eat them.</h3>
+      <p class="closing">We can go bowling and drink beers too!</p>
+      <a class="btn" href="mailto:jciano08@gmail.com">CONTACT ME</a>
+    </div>
+  </div>
 
-  <hr>
-  <h3>Education</h3>
-  <ul>
-    <li>Portland State University</li>
-    <li>Clackamas Community College</li>
-  </ul>
-  <hr>
-  <table cellspacing=10>
-    <thead>
-      <tr>
-        <th>Dates</th>
-        <th>Work</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2020-Present</td>
-        <td>Implementation Manager at Momentive.ai</td>
-      </tr>
-      <tr>
-        <td>2020</td>
-        <td>Fantasy Football Runner Up</td>
-      </tr>
-    </tbody>
-  </table>
-  <hr>
-  <h3>Skills</h3>
-  <table cellspacing=10>
-    <tbody>
-      <tr>
-        <td>Bowling</td>
-        <td>&#127790&#127790&#127790&#127790</td>
-      </tr>
-      <tr>
-        <td>HTML</td>
-        <td>&#127790&#127790</td>
-      </tr>
-      <tr>
-        <td>Napping</td>
-        <td>&#127790&#127790&#127790&#127790&#127790</td>
-      </tr>
-      <tr>
-        <td>Video Games</td>
-        <td>&#127790&#127790&#127790&#127790</td>
-      </tr>
-    </tbody>
-  </table>
-  <hr>
-  <h3>Hobbies</h3>
-  <ol>
-    <li>Sports</li>
-    <li><a href="https://worldofwarcraft.com/en-us/character/us/deathwing/mispelled">Video Games</a></li>
-    <li>Exercise</li>
-  </ol>
-  <h3><a href="contact.html">Contact Me</a></h3>
+
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/in/justin-ciano/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/justin_ciano">Twitter</a>
+    <p class="copyright">©2022 Justin Ciano.</p>
+  </div>
 </body>
 
 </html>
